Sat Aug  7 17:55:59 2004  Balachandran Natarajan  <bala@dre.vanderbilt.edu>

 	* DAnCE/tests/NodeApplicationTest/NodeAppTest.mpc:

	  Prevented compilation errors if CIDL is not built.

Sat Aug  7 16:43:45 2004  Balachandran Natarajan  <bala@dre.vanderbilt.edu>

 	* tests/CIDL/CodeGen/CodeGen.mpc:
	* tests/IDL3/Homes/Basic/Basic.mpc:

	  Changed the name of the stub library and project names. There
	  was a clash in project and library names.

Thu Aug  5 17:42:56 2004  Jeff Parsons <j.parsons@vanderbilt.edu>

        * CIDLC/ExecImplGenerator.cpp:
        * CIDLC/ExecImplGenerator.hpp:
        * CIDLC/ExecImplHeaderGenerator.cpp:
        * CIDLC/ExecImplHeaderGenerator.hpp:
        * CIDLC/ExecImplSourceGenerator.cpp:
        * CIDLC/ExecImplSourceGenerator.hpp:

          New files, which generate empty executor implementation
          classes (with spec-defined operations filled in and
          IDL operations and attributes marked for the developer
          to fill in). This generation is optional, triggered by
          the CIDL compiler command line option --gen-exec-impl.
          Two other options --exec-hdr-file-suffix and --exec-src-file-suffix,
          can override the default generated file extensions of
          _exec.h and _exec.cpp. Tao others, --exec-hdr-file-regex and
          --exec-src-file-regex, allow replacement of default generated
          filenames by pattern matching with regular expressions.
          And finally, two more, --exec-export-include,
          overrides the default generated export macro header file,
          and --exec-export-macro, overrides the default generated
          export macro for the executor implementation file.

        * CIDLC/Literals.cpp:
        * CIDLC/Literals.hpp:
        * CIDLC/ServantGenerator.cpp:
        * CIDLC/ServantHeaderGenerator.cpp:
        * CIDLC/ServantHeaderGenerator.hpp:
        * CIDLC/ServantSourceGenerator.cpp:
        * CIDLC/TypeNameEmitter.cpp: